k8/whoami/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami-deployment
  labels:
    app: whoami-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-deployment
  template:
    metadata:
      labels:
        app: whoami-deployment
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
